--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     align-items: center;
     color: white;
     min-height: 100vh;
-    background-image: url(../assets/background.jpg);
+    background-image: url(../public/assets/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
